# redecoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Dockerfile  Dockerfile.alltools  Dockerfile.amd64  Dockerfile.arm32v7  INSTALL.md  LICENSE  Makefile.am  README.md  about  background.tiff  configure.ac  libredecoinconsensus.pc.in  run.sh
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  cuckoocache.h  (+93 more)
src/algo/: hash_algos.h
src/assets/: assetdb.cpp  assetdb.h  assets.cpp  assets.h  assetsnapshotdb.cpp  assetsnapshotdb.h  assettypes.cpp  assettypes.h  messages.cpp  messages.h  myassetsdb.cpp  myassetsdb.h  restricteddb.cpp  restricteddb.h  rewards.cpp  rewards.h  snapshotrequestdb.cpp  snapshotrequestdb.h
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_redecoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  prevector_destructor.cpp  rollingbloom.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.cpp  consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_sse4.cpp  sha512.cpp  sha512.h
src/crypto/ctaes/: README.md
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  assetcontroldialog.cpp  assetcontroldialog.h  assetcontroltreewidget.cpp  assetcontroltreewidget.h  assetfilterproxy.cpp  assetfilterproxy.h  assetrecord.h  assetsdialog.cpp  assetsdialog.h  assettablemodel.cpp  assettablemodel.h  bantablemodel.cpp  bantablemodel.h  callback.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createassetdialog.cpp  createassetdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  darkstyle.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  (+98 more)
src/qt/forms/: addressbookpage.ui  assetcontroldialog.ui  assetsdialog.ui  coincontroldialog.ui  createassetdialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  reissueassetdialog.ui  restrictedassetsdialog.ui  sendassetsentry.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: redecoin_af.ts  redecoin_af_ZA.ts  redecoin_ar.ts  redecoin_be_BY.ts  redecoin_bg.ts  redecoin_bg_BG.ts  redecoin_ca.ts  redecoin_ca@valencia.ts  redecoin_ca_ES.ts  redecoin_cs.ts  redecoin_cy.ts  redecoin_da.ts  redecoin_de.ts  redecoin_el.ts  redecoin_el_GR.ts  redecoin_en.ts  redecoin_en_GB.ts  redecoin_eo.ts  redecoin_es.ts  redecoin_es_AR.ts  redecoin_es_CL.ts  redecoin_es_CO.ts  redecoin_es_DO.ts  redecoin_es_ES.ts  redecoin_es_MX.ts  redecoin_es_UY.ts  redecoin_es_VE.ts  redecoin_et.ts  redecoin_et_EE.ts  redecoin_eu_ES.ts  redecoin_fa.ts  redecoin_fa_IR.ts  redecoin_fi.ts  redecoin_fr.ts  redecoin_fr_CA.ts  redecoin_fr_FR.ts  redecoin_gl.ts  redecoin_he.ts  redecoin_hi_IN.ts  redecoin_hr.ts  (+45 more)
src/qt/res/: redecoin-qt-res.rc
src/qt/test/: compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  (+5 more)
src/rpc/: assets.cpp  blockchain.cpp  blockchain.h  client.cpp  client.h  messages.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  rewards.cpp  safemode.h  server.cpp  server.h  test.json
src/script/: interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  redecoinconsensus.cpp  redecoinconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  (+27 more)
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.cpp  feebumper.h  fees.cpp  fees.h  init.cpp  init.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+336 files in other folders)
